# PythonMentor

./: .gitignore  5_22最终状态.md  Makefile  Prompt与教学机制重构设计.md  README.md  项目进度分析与待办清单.md
knowledge-base/: concepts.json
knowledge-base/code_examples/patterns/: basic_patterns.md
knowledge-base/error_logs/: common_errors.json
knowledge-base/teaching_cases/: list_comprehension_socratic.json  loop_concept_explanation.json  name_error_debugging.json  type_error_diagnosis.json
knowledge-base/textbooks/: python_basics.md  python_errors.md
python-backend/: .env.example  config.py  main.py  pyproject.toml  test_all.py  test_evaluator_live.py  test_fixes.py  test_integration.py  test_rag.py  test_raw_thinking.py  test_units.py
python-backend/llm/: __init__.py  claude_provider.py  ollama_provider.py  openai_provider.py  prompts.py  provider.py
python-backend/rag/: __init__.py  embedding_provider.py  history_indexer.py  indexer.py  retriever.py
python-backend/routers/: chat.py  knowledge.py  state.py
python-backend/state/: session_manager.py  student_profile.py
python-backend/teaching/: cognitive_state.py  critic.py  emotion_detector.py  error_diagnosis.py  session_summarizer.py  state_evaluator.py
vscode-extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
vscode-extension/media/: chat.js
vscode-extension/scripts/: clean-backend.js  copy-backend.js
vscode-extension/src/: extension.ts
vscode-extension/src/backend/: BackendClient.ts  BackendManager.ts  PythonDetector.ts
(+4 files in other folders)
