[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-mentor-backend"
version = "0.1.1"
description = "PythonMentor 后端服务"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "openai>=1.30.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["llm*", "rag*", "state*", "routers*", "teaching*"]
